deploy/stable/stable.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stable
  namespace: canary-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stable
  template:
    metadata:
      labels:
        app: stable
    spec:
      containers:
      - name: stable
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
